Bug 73519 - Window border is displayed in full screen mode / crash when NVIDIA's twin view is activated
Summary: Window border is displayed in full screen mode / crash when NVIDIA's twin vie...
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Andreas Kling
URL:
Keywords:
: 132273 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-01-26 09:50 UTC by Matthias Gr
Modified: 2006-08-11 22:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
krdc crash report (2.53 KB, text/plain)
2006-08-05 18:54 UTC, Fathi Boudra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Gr 2004-01-26 09:50:09 UTC
Version:            (using KDE KDE 3.2.0)
Installed from:    SuSE RPMs
Compiler:          3.3.1 
OS:          Linux

I'm using TwinView on a NVIDIA Geforce2 Go Graphic Card (Inspiron 8200 Notebook). When I switch to full screen mode, krdc crashes (kde 3.1.4 worked fine). When twin view is switched off, full screen mode works but the window border is still displayed.
Comment 1 Oded Arbel 2004-01-26 10:23:16 UTC
The second issue is probably the same as Bug 69635. 
Tim suggested it might be a kwin bug which sounds just about right to me, regarding the crash problem.
Comment 2 Matthias Gr 2004-05-26 08:51:50 UTC
can not check if the bug is present in KDE 3.2.2 since krdc still crashes when switching to full screen mode
Comment 3 Avuton Olrich 2005-08-16 00:31:25 UTC
This bug _still_ exists, When I run on the primary window krdc can fullscreen, when I run on the alternate display krdc crashes and complains of a invalid bt.
Comment 4 Fathi Boudra 2006-08-05 18:54:39 UTC
Created attachment 17237 [details]
krdc crash report
Comment 5 Fathi Boudra 2006-08-05 18:55:48 UTC
i'm affected by krdc crashes when nvidia twinview is enabled using krdc 3.5.4
i joined the crash report.
Comment 6 Andreas Kling 2006-08-09 19:47:59 UTC
SVN commit 571507 by kling:

Check the return value from XF86VidModeGetAllModeLines() to avoid crashing.

BUG: 73519


 M  +6 -2      vidmode.cpp  


--- branches/KDE/3.5/kdenetwork/krdc/vidmode.cpp #571506:571507
@@ -38,7 +38,9 @@
 	if (!XF86VidModeQueryExtension(dpy, &eventB, &errorB))
 		return;
 
-	XF86VidModeGetAllModeLines(dpy,oldResolution.screen,&modecount, &modes);
+	if (!XF86VidModeGetAllModeLines(dpy, oldResolution.screen, &modecount, &modes))
+		return;
+
 	for (int i = 0; i < modecount; i++) {
 		int w = (*modes[i]).hdisplay;
 		int h = (*modes[i]).vdisplay;
@@ -69,7 +71,9 @@
 	if (!XF86VidModeQueryExtension(dpy, &eventB, &errorB))
 		return Resolution();
 
-	XF86VidModeGetAllModeLines(dpy,screen,&modecount, &modes);
+	if (!XF86VidModeGetAllModeLines(dpy,screen,&modecount, &modes))
+		return Resolution();
+
 	int cw = (*modes[0]).hdisplay;
 	int ch = (*modes[0]).vdisplay;
 	nx = cw;
Comment 7 Andreas Kling 2006-08-11 22:19:25 UTC
*** Bug 132273 has been marked as a duplicate of this bug. ***