Check the return value from XF86VidModeGetAllModeLines() to avoid crashing.

BUG: 73519

svn path=/branches/KDE/3.5/kdenetwork/krdc/; revision=571507